--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-ws": "^10.4.13",
     "@nestjs/websockets": "^10.4.13",
     "socket.io": "^4.8.1",
+    "express-rate-limit": "^7.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
