--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@nestjs/platform-socket.io": "^10.4.13",
     "@nestjs/platform-ws": "^10.4.13",
     "@nestjs/websockets": "^10.4.13",
-    "socket.io": "^4.8.1",
     "express-rate-limit": "^7.4.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
